# PiDrone

./: .gitignore  CMakeLists.txt  README.md  drone.c  mpu.c  pubspec.yaml  upload.sh
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pi_drone/: MainActivity.kt
lib/: controllerpage.dart  main.dart
lib/joystick/: joystick_stick.dart  joystick_stick_offset_calculator.dart
test/: widget_test.dart
